@startuml ER-Diagram
hide empty methods


entity BaseModel {
    * id : number <<generated>>
    --
    * created_at : timestamp
    * updated_at : timestamp
    * deleted_at : timestamp
    * version: number
}

entity Role {
    * name : text
    * description : text
}

entity User {
    * username : text
    * password : text
    --
    * role_id : number <<FK>>
}

entity Administrative {
    * name : text
    --
    * user_id : number <<FK>>
}

entity Admin {
    * name : text
    --
    * user_id : number <<FK>>
}

entity ShiftManager {
    * name : text
    --
    * user_id : number <<FK>>
}


entity Area {
    * name : text
}

entity Line {
    * name : text
    --
    * area_id : number <<FK>>
    * user_id : number <<FK>>
}

entity Operator {
    * name : text
    * rut : text
    --
    * line_id : number <<FK>>
    * area_id : number <<FK>>
    user_id : number <<FK>>
}

entity Productivity {
    * packed_tons : number
    * tons_produced : number
    --
    * shift_id : uuid <<FK>>
    * line_id : number <<FK>>
}

entity LabelingQuality {
    * is_done : boolean
    * comment : text
    --
    * shift_id : uuid <<FK>>
    * line_id : number <<FK>>
}

entity Cleanliness {
    * is_done : boolean
    * comment : text
    --
    * shift_id : uuid <<FK>>
    * line_id : number <<FK>>
}

entity PeerObservations {
    * comment : text
    --
    * shift_id : uuid <<FK>>
    * line_id : number <<FK>>
}

entity Security {
    * comment : text
    --
    * shift_id : uuid <<FK>>
    * line_id : number <<FK>>
}

entity MonthlyProgrammingProgress {
    * monthly_order : number
    --
    * shift_id : uuid <<FK>>
    * line_id : number <<FK>>
}

entity Shift{
    * id : uuid <<generated>>
    --
    * shift : text
    * end_time : timestamp <<nullable>>
    * created_at : timestamp
    * updated_at : timestamp
    * deleted_at : timestamp
    * version : number
    --
    * shiftmanager_id : number <<FK>>
}

note bottom of BaseModel
    This is the base entity
    for all entities.
    Excluding the Shift entity.
end note

Line ||--|| User
User ||--|| Administrative
User ||--|| Admin
ShiftManager ||--|| User
Operator |o--|| User
User }o--|| Role
Operator }o--|| Line
Operator }o--|| Area
Area ||--o{ Line

Shift }o--|| ShiftManager

Productivity ||--|| Shift
LabelingQuality }o--|| Shift
Cleanliness ||--|| Shift
PeerObservations }o--|| Shift
Security ||--|| Shift
MonthlyProgrammingProgress |o--o| Shift

Line ||--o{ Productivity
Line ||--o{ LabelingQuality
Line ||--o{ Cleanliness
Line ||--o{ PeerObservations
Line ||--o{ Security
Line ||--|| MonthlyProgrammingProgress


@enduml
